--- a/trunk/misc/test xhtml import/importTest-valid-simple-2.html
+++ b/trunk/misc/test xhtml import/importTest-valid-simple-2.html
@@ -4,12 +4,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
 <meta http-equiv="content-type" content="text/html;charset=iso-8859-1"/>
-<title>Obi Import Structure Test of a Valid Document</title>
+<title>Obi Import Structure Test of a Valid Document (few headings)</title>
 </head>
 
 <body>
 
-	<h1>Obi Import Structure Test of a Valid Document</h1>
+	<h1>Valid Document with few headings</h1>
 	<p>blah blah blah</p>
 	<h1>first heading</h1>
 	<h2>second heading</h2>
