--- a/trunk/misc/test xhtml import/importTest-valid-simple-3.html
+++ b/trunk/misc/test xhtml import/importTest-valid-simple-3.html
@@ -4,13 +4,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
 <meta http-equiv="content-type" content="text/html;charset=iso-8859-1"/>
-<title>Obi Import Structure Test, Invalid, No headings</title>
+<title>Obi Import Structure Test of a Valid Document (four heading-one elements)</title>
 </head>
 
 <body>
 
-	
-	<p>No headings!</p>
-	
+	<h1>First heading</h1>
+	<h1>Second heading</h1>
+	<h1>Third heading</h1>
+	<h1>Fourth heading</h1>
 	</body>
 </html>
