--- a/trunk/misc/test xhtml import/importTest-wrongOrder-2.html
+++ b/trunk/misc/test xhtml import/importTest-wrongOrder-2.html
@@ -5,12 +5,12 @@
 <html>
 <head>
 <meta http-equiv="content-type" content="text/html;charset=iso-8859-1"/>
-<title>Obi Import Structure Test of an Invalid Document</title>
+<title>Obi Import Structure Test, Invalid, Wrong element order</title>
 </head>
 
 <body>
 
-	<h1><a href="http://example.com">Obi Import Structure Test of an Invalid Document</h1>
+	<h1><a href="http://example.com">Wrong element order</a></h1>
 	<p>blah blah blah</p>
 	
 	<h1>Section 1</h1>
